SLT_Handler/Include/MMC/MMCWFP39.pas


 function start_move      ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function move    ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function start_r_move    ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function r_move      ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function start_s_move    ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function s_move      ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function start_rs_move       ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function rs_move     ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function start_t_move    ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint;  dcc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function t_move      ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint;  dcc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function start_ts_move       ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint;  dcc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function ts_move     ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint;  dcc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function start_tr_move       ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint;  dcc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function tr_move     ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint;  dcc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function start_trs_move      ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint;  dcc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function trs_move    ( ax : Smallint;  pos : Double;  vel : Double;  acc : Smallint;  dcc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function start_t_move_all    ( axLen : Smallint; arriax : pointer; arrdPos : pointer; arrdVel : pointer; arriAcc : pointer; arriDcc : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function t_move_all      ( axLen : Smallint; arriax : pointer; arrdPos : pointer; arrdVel : pointer; arriAcc : pointer; arriDcc : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function start_ts_move_all   ( axLen : Smallint; arriax : pointer; arrdPos : pointer; arrdVel : pointer; arriAcc : pointer; arriDcc : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function ts_move_all     ( axLen : Smallint; arriax : pointer; arrdPos : pointer; arrdVel : pointer; arriAcc : pointer; arriDcc : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';


 function start_move_all      ( axLen : Smallint; arriax : pointer; arrdPos : pointer; arrdVel : pointer; arriAcc : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function move_all        ( axLen : Smallint; arriax : pointer; arrdPos : pointer; arrdVel : pointer; arriAcc : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function start_s_move_all    ( axLen : Smallint; arriax : pointer; arrdPos : pointer; arrdVel : pointer; arriAcc : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function s_move_all      ( axLen : Smallint; arriax : pointer; arrdPos : pointer; arrdVel : pointer; arriAcc : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function wait_for_done       ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function wait_for_all    ( axNum : Smallint; arriaxes : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function v_move      ( ax : Smallint;  vel : Double;  accel : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function set_positive_sw_limit       ( ax : Smallint;  f : Double;  n : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function get_positive_sw_limit       ( ax : Smallint; pdPos : pointer; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_negative_sw_limit       ( ax : Smallint;  f : Double;  n : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function get_negative_sw_limit       ( ax : Smallint; pdPos : pointer; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
            
 function get_accel_limit     ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_accel_limit     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_accel_limit    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_vel_limit       ( ax : Smallint; pdVel : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_vel_limit       ( ax : Smallint;  f : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';

 function set_positive_limit      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_positive_limit      ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_negative_limit      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_negative_limit      ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_in_position     ( ax : Smallint;  f : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_in_position     ( ax : Smallint; pdVal : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_error_limit     ( ax : Smallint;  f : Double;  n : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function get_error_limit     ( ax : Smallint; pdErrL : pointer; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_positive_level      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_positive_level      ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_negative_level      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_negative_level      ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
            
 function home_switch     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function pos_switch      ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function neg_switch      ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function amp_fault_switch    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_io      ( bd : Smallint;  l : Longint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_io      ( bd : Smallint; plBits : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function get_out_io      ( bd : Smallint; plBits : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_bit     ( i : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function reset_bit       ( i : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
           
 function get_gain    ( ax : Smallint; arrlcoeff : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_gain       ( ax : Smallint; arrlcoeff : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_gain    ( ax : Smallint; arrlcoeff : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fset_gain       ( ax : Smallint; arrlcoeff : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function get_v_gain      ( ax : Smallint; arrlcoeff : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_v_gain     ( ax : Smallint; arrlcoeff : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_v_gain      ( ax : Smallint; arrlcoeff : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fset_v_gain     ( ax : Smallint; arrlcoeff : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function fset_p_integration      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_v_integration      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fget_p_integration      ( ax : Smallint; pimode : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_v_integration      ( ax : Smallint; pimode : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_p_integration       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_p_integration       ( ax : Smallint; pimode : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_v_integration       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_v_integration       ( ax : Smallint; pimode : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
